// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildConfig > should generate correct config for common + node ruleSets 1`] = `
[
  {
    "languageOptions": {
      "globals": {
        "AbortController": false,
        "AbortSignal": false,
        "AsyncDisposableStack": false,
        "Blob": false,
        "BroadcastChannel": false,
        "Buffer": false,
        "ByteLengthQueuingStrategy": false,
        "CloseEvent": false,
        "CompressionStream": false,
        "CountQueuingStrategy": false,
        "Crypto": false,
        "CryptoKey": false,
        "CustomEvent": false,
        "DOMException": false,
        "DecompressionStream": false,
        "DisposableStack": false,
        "ErrorEvent": false,
        "Event": false,
        "EventTarget": false,
        "File": false,
        "FormData": false,
        "Headers": false,
        "MessageChannel": false,
        "MessageEvent": false,
        "MessagePort": false,
        "Navigator": false,
        "Performance": false,
        "PerformanceEntry": false,
        "PerformanceMark": false,
        "PerformanceMeasure": false,
        "PerformanceObserver": false,
        "PerformanceObserverEntryList": false,
        "PerformanceResourceTiming": false,
        "ReadableByteStreamController": false,
        "ReadableStream": false,
        "ReadableStreamBYOBReader": false,
        "ReadableStreamBYOBRequest": false,
        "ReadableStreamDefaultController": false,
        "ReadableStreamDefaultReader": false,
        "Request": false,
        "Response": false,
        "Storage": false,
        "SubtleCrypto": false,
        "SuppressedError": false,
        "TextDecoder": false,
        "TextDecoderStream": false,
        "TextEncoder": false,
        "TextEncoderStream": false,
        "TransformStream": false,
        "TransformStreamDefaultController": false,
        "URL": false,
        "URLPattern": false,
        "URLSearchParams": false,
        "WebAssembly": false,
        "WebSocket": false,
        "WritableStream": false,
        "WritableStreamDefaultController": false,
        "WritableStreamDefaultWriter": false,
        "__dirname": false,
        "__filename": false,
        "atob": false,
        "btoa": false,
        "clearImmediate": false,
        "clearInterval": false,
        "clearTimeout": false,
        "console": false,
        "crypto": false,
        "exports": true,
        "fetch": false,
        "global": false,
        "localStorage": false,
        "module": false,
        "navigator": false,
        "performance": false,
        "process": false,
        "queueMicrotask": false,
        "require": false,
        "sessionStorage": false,
        "setImmediate": false,
        "setInterval": false,
        "setTimeout": false,
        "structuredClone": false,
      },
      "parserOptions": {
        "projectService": false,
        "sourceType": "module",
      },
    },
  },
  {
    "files": [
      "**/*.{ts,tsx}",
    ],
    "languageOptions": {
      "parserOptions": {
        "projectService": true,
      },
    },
  },
  {
    "rules": {
      "constructor-super": "error",
      "for-direction": "error",
      "getter-return": "error",
      "no-async-promise-executor": "error",
      "no-case-declarations": "error",
      "no-class-assign": "error",
      "no-compare-neg-zero": "error",
      "no-cond-assign": "error",
      "no-const-assign": "error",
      "no-constant-binary-expression": "error",
      "no-constant-condition": "error",
      "no-control-regex": "error",
      "no-debugger": "error",
      "no-delete-var": "error",
      "no-dupe-args": "error",
      "no-dupe-class-members": "error",
      "no-dupe-else-if": "error",
      "no-dupe-keys": "error",
      "no-duplicate-case": "error",
      "no-empty": "error",
      "no-empty-character-class": "error",
      "no-empty-pattern": "error",
      "no-empty-static-block": "error",
      "no-ex-assign": "error",
      "no-extra-boolean-cast": "error",
      "no-fallthrough": "error",
      "no-func-assign": "error",
      "no-global-assign": "error",
      "no-import-assign": "error",
      "no-invalid-regexp": "error",
      "no-irregular-whitespace": "error",
      "no-loss-of-precision": "error",
      "no-misleading-character-class": "error",
      "no-new-native-nonconstructor": "error",
      "no-nonoctal-decimal-escape": "error",
      "no-obj-calls": "error",
      "no-octal": "error",
      "no-prototype-builtins": "error",
      "no-redeclare": "error",
      "no-regex-spaces": "error",
      "no-self-assign": "error",
      "no-setter-return": "error",
      "no-shadow-restricted-names": "error",
      "no-sparse-arrays": "error",
      "no-this-before-super": "error",
      "no-undef": "error",
      "no-unexpected-multiline": "error",
      "no-unreachable": "error",
      "no-unsafe-finally": "error",
      "no-unsafe-negation": "error",
      "no-unsafe-optional-chaining": "error",
      "no-unused-labels": "error",
      "no-unused-private-class-members": "error",
      "no-unused-vars": "error",
      "no-useless-backreference": "error",
      "no-useless-catch": "error",
      "no-useless-escape": "error",
      "no-with": "error",
      "require-yield": "error",
      "use-isnan": "error",
      "valid-typeof": "error",
    },
  },
  {
    "rules": {
      "accessor-pairs": [
        "error",
        {
          "enforceForClassMembers": true,
          "getWithoutSet": false,
          "setWithoutGet": true,
        },
      ],
      "array-callback-return": [
        "error",
        {
          "allowImplicit": false,
          "allowVoid": false,
          "checkForEach": false,
        },
      ],
      "complexity": [
        "error",
        {
          "max": 20,
          "variant": "modified",
        },
      ],
      "consistent-this": [
        "error",
        "that",
      ],
      "constructor-super": "error",
      "curly": [
        "error",
        "multi-line",
      ],
      "default-case-last": "error",
      "eqeqeq": [
        "error",
        "always",
      ],
      "grouped-accessor-pairs": [
        "error",
        "getBeforeSet",
      ],
      "guard-for-in": "error",
      "logical-assignment-operators": [
        "error",
        "always",
        {
          "enforceForIfStatements": true,
        },
      ],
      "max-depth": [
        "error",
        {
          "max": 5,
        },
      ],
      "max-lines": [
        "error",
        {
          "max": 400,
          "skipBlankLines": true,
          "skipComments": true,
        },
      ],
      "max-nested-callbacks": [
        "error",
        {
          "max": 3,
        },
      ],
      "new-cap": [
        "error",
        {
          "capIsNew": false,
          "newIsCap": true,
          "properties": true,
        },
      ],
      "no-alert": "error",
      "no-caller": "error",
      "no-cond-assign": [
        "error",
        "always",
      ],
      "no-console": [
        "error",
      ],
      "no-constant-condition": [
        "error",
        {
          "checkLoops": false,
        },
      ],
      "no-constructor-return": [
        "error",
      ],
      "no-empty": [
        "error",
        {
          "allowEmptyCatch": true,
        },
      ],
      "no-eval": "error",
      "no-extend-native": "error",
      "no-extra-bind": "error",
      "no-implicit-globals": [
        "error",
      ],
      "no-inner-declarations": [
        "error",
        "both",
        {
          "blockScopedFunctions": "disallow",
        },
      ],
      "no-iterator": "error",
      "no-labels": [
        "error",
        {
          "allowLoop": false,
          "allowSwitch": false,
        },
      ],
      "no-lone-blocks": "error",
      "no-lonely-if": "error",
      "no-multi-assign": [
        "error",
        {
          "ignoreNonDeclaration": false,
        },
      ],
      "no-multi-str": "error",
      "no-new": "error",
      "no-new-func": "error",
      "no-new-wrappers": "error",
      "no-object-constructor": "error",
      "no-octal-escape": "error",
      "no-param-reassign": "error",
      "no-plusplus": "error",
      "no-promise-executor-return": [
        "error",
        {
          "allowVoid": false,
        },
      ],
      "no-proto": "error",
      "no-restricted-globals": [
        "error",
        {
          "message": "Use local parameter instead.",
          "name": "event",
        },
        {
          "message": "Do not commit fdescribe.",
          "name": "fdescribe",
        },
      ],
      "no-restricted-imports": [
        "error",
        {
          "patterns": [
            {
              "group": [
                "../",
              ],
              "message": "Use absolute paths starting with @",
            },
          ],
        },
      ],
      "no-return-assign": [
        "error",
        "always",
      ],
      "no-script-url": "error",
      "no-self-assign": [
        "error",
        {
          "props": true,
        },
      ],
      "no-self-compare": "error",
      "no-sequences": [
        "error",
        {
          "allowInParentheses": false,
        },
      ],
      "no-template-curly-in-string": "error",
      "no-unmodified-loop-condition": "error",
      "no-unneeded-ternary": [
        "error",
        {
          "defaultAssignment": false,
        },
      ],
      "no-unreachable-loop": [
        "error",
      ],
      "no-useless-assignment": "error",
      "no-useless-call": "error",
      "no-useless-computed-key": "error",
      "no-useless-concat": "error",
      "no-useless-rename": "error",
      "no-useless-return": "error",
      "no-var": "error",
      "no-void": [
        "error",
        {
          "allowAsStatement": true,
        },
      ],
      "object-shorthand": [
        "error",
        "properties",
        {
          "avoidQuotes": true,
        },
      ],
      "one-var": [
        "error",
        {
          "initialized": "never",
        },
      ],
      "operator-assignment": [
        "error",
        "always",
      ],
      "prefer-arrow-callback": [
        "error",
        {
          "allowNamedFunctions": true,
          "allowUnboundThis": true,
        },
      ],
      "prefer-const": [
        "error",
        {
          "destructuring": "all",
          "ignoreReadBeforeAssign": false,
        },
      ],
      "prefer-exponentiation-operator": "error",
      "prefer-numeric-literals": "error",
      "prefer-object-has-own": "error",
      "prefer-object-spread": "error",
      "prefer-regex-literals": [
        "error",
        {
          "disallowRedundantWrapping": true,
        },
      ],
      "prefer-template": "error",
      "radix": [
        "error",
        "always",
      ],
      "symbol-description": "error",
      "unicode-bom": [
        "error",
        "never",
      ],
      "use-isnan": [
        "error",
        {
          "enforceForIndexOf": true,
          "enforceForSwitchCase": true,
        },
      ],
      "valid-typeof": [
        "error",
        {
          "requireStringLiterals": true,
        },
      ],
      "yoda": [
        "error",
        "never",
      ],
    },
  },
  {
    "files": [
      "**/*.{test,spec}.{ts,tsx,js,jsx}",
    ],
    "rules": {
      "max-lines": [
        "error",
        {
          "max": 900,
          "skipBlankLines": true,
          "skipComments": true,
        },
      ],
      "max-nested-callbacks": [
        "error",
        {
          "max": 4,
        },
      ],
      "no-console": "off",
    },
  },
  {
    "files": [
      "src/index.ts",
    ],
    "rules": {
      "no-console": "off",
    },
  },
  {
    "files": [
      "**/*.config.{js,mjs,ts}",
    ],
    "rules": {
      "no-restricted-imports": "off",
    },
  },
  {
    "languageOptions": {
      "parser": "[Parser]",
      "sourceType": "module",
    },
    "name": "typescript-eslint/base",
    "plugins": [
      "@typescript-eslint",
    ],
  },
  {
    "files": [
      "**/*.ts",
      "**/*.tsx",
      "**/*.mts",
      "**/*.cts",
    ],
    "name": "typescript-eslint/eslint-recommended",
    "rules": {
      "constructor-super": "off",
      "getter-return": "off",
      "no-class-assign": "off",
      "no-const-assign": "off",
      "no-dupe-args": "off",
      "no-dupe-class-members": "off",
      "no-dupe-keys": "off",
      "no-func-assign": "off",
      "no-import-assign": "off",
      "no-new-native-nonconstructor": "off",
      "no-new-symbol": "off",
      "no-obj-calls": "off",
      "no-redeclare": "off",
      "no-setter-return": "off",
      "no-this-before-super": "off",
      "no-undef": "off",
      "no-unreachable": "off",
      "no-unsafe-negation": "off",
      "no-var": "error",
      "no-with": "off",
      "prefer-const": "error",
      "prefer-rest-params": "error",
      "prefer-spread": "error",
    },
  },
  {
    "name": "typescript-eslint/recommended-type-checked",
    "rules": {
      "@typescript-eslint/await-thenable": "error",
      "@typescript-eslint/ban-ts-comment": "error",
      "@typescript-eslint/no-array-constructor": "error",
      "@typescript-eslint/no-array-delete": "error",
      "@typescript-eslint/no-base-to-string": "error",
      "@typescript-eslint/no-duplicate-enum-values": "error",
      "@typescript-eslint/no-duplicate-type-constituents": "error",
      "@typescript-eslint/no-empty-object-type": "error",
      "@typescript-eslint/no-explicit-any": "error",
      "@typescript-eslint/no-extra-non-null-assertion": "error",
      "@typescript-eslint/no-floating-promises": "error",
      "@typescript-eslint/no-for-in-array": "error",
      "@typescript-eslint/no-implied-eval": "error",
      "@typescript-eslint/no-misused-new": "error",
      "@typescript-eslint/no-misused-promises": "error",
      "@typescript-eslint/no-namespace": "error",
      "@typescript-eslint/no-non-null-asserted-optional-chain": "error",
      "@typescript-eslint/no-redundant-type-constituents": "error",
      "@typescript-eslint/no-require-imports": "error",
      "@typescript-eslint/no-this-alias": "error",
      "@typescript-eslint/no-unnecessary-type-assertion": "error",
      "@typescript-eslint/no-unnecessary-type-constraint": "error",
      "@typescript-eslint/no-unsafe-argument": "error",
      "@typescript-eslint/no-unsafe-assignment": "error",
      "@typescript-eslint/no-unsafe-call": "error",
      "@typescript-eslint/no-unsafe-declaration-merging": "error",
      "@typescript-eslint/no-unsafe-enum-comparison": "error",
      "@typescript-eslint/no-unsafe-function-type": "error",
      "@typescript-eslint/no-unsafe-member-access": "error",
      "@typescript-eslint/no-unsafe-return": "error",
      "@typescript-eslint/no-unsafe-unary-minus": "error",
      "@typescript-eslint/no-unused-expressions": "error",
      "@typescript-eslint/no-unused-vars": "error",
      "@typescript-eslint/no-wrapper-object-types": "error",
      "@typescript-eslint/only-throw-error": "error",
      "@typescript-eslint/prefer-as-const": "error",
      "@typescript-eslint/prefer-namespace-keyword": "error",
      "@typescript-eslint/prefer-promise-reject-errors": "error",
      "@typescript-eslint/require-await": "error",
      "@typescript-eslint/restrict-plus-operands": "error",
      "@typescript-eslint/restrict-template-expressions": "error",
      "@typescript-eslint/triple-slash-reference": "error",
      "@typescript-eslint/unbound-method": "error",
      "no-array-constructor": "off",
      "no-implied-eval": "off",
      "no-throw-literal": "off",
      "no-unused-expressions": "off",
      "no-unused-vars": "off",
      "prefer-promise-reject-errors": "off",
      "require-await": "off",
    },
  },
  {
    "rules": {
      "@typescript-eslint/adjacent-overload-signatures": "error",
      "@typescript-eslint/array-type": [
        "error",
        {
          "default": "array-simple",
        },
      ],
      "@typescript-eslint/await-thenable": "error",
      "@typescript-eslint/ban-ts-comment": [
        "error",
        {
          "minimumDescriptionLength": 3,
          "ts-check": false,
          "ts-expect-error": "allow-with-description",
          "ts-ignore": true,
          "ts-nocheck": true,
        },
      ],
      "@typescript-eslint/ban-tslint-comment": "error",
      "@typescript-eslint/class-literal-property-style": [
        "error",
        "fields",
      ],
      "@typescript-eslint/consistent-generic-constructors": [
        "error",
        "constructor",
      ],
      "@typescript-eslint/consistent-indexed-object-style": [
        "error",
        "record",
      ],
      "@typescript-eslint/consistent-type-assertions": [
        "error",
        {
          "assertionStyle": "as",
          "objectLiteralTypeAssertions": "never",
        },
      ],
      "@typescript-eslint/consistent-type-definitions": "off",
      "@typescript-eslint/consistent-type-exports": [
        "error",
        {
          "fixMixedExportsWithInlineTypeSpecifier": true,
        },
      ],
      "@typescript-eslint/consistent-type-imports": [
        "error",
        {
          "disallowTypeAnnotations": true,
          "fixStyle": "inline-type-imports",
          "prefer": "type-imports",
        },
      ],
      "@typescript-eslint/dot-notation": [
        "error",
        {
          "allowIndexSignaturePropertyAccess": false,
          "allowKeywords": true,
          "allowPrivateClassPropertyAccess": false,
          "allowProtectedClassPropertyAccess": false,
        },
      ],
      "@typescript-eslint/max-params": [
        "error",
        {
          "max": 4,
        },
      ],
      "@typescript-eslint/method-signature-style": [
        "error",
        "property",
      ],
      "@typescript-eslint/naming-convention": [
        "error",
        {
          "format": [
            "camelCase",
          ],
          "leadingUnderscore": "allow",
          "selector": "default",
          "trailingUnderscore": "allow",
        },
        {
          "format": [
            "camelCase",
            "PascalCase",
          ],
          "selector": "import",
        },
        {
          "format": [
            "camelCase",
            "UPPER_CASE",
          ],
          "leadingUnderscore": "allow",
          "selector": "variable",
          "trailingUnderscore": "allow",
        },
        {
          "format": [
            "PascalCase",
          ],
          "selector": "typeLike",
        },
        {
          "format": [
            "PascalCase",
          ],
          "selector": "enumMember",
        },
        {
          "format": null,
          "selector": "objectLiteralProperty",
        },
        {
          "format": null,
          "selector": "typeProperty",
        },
      ],
      "@typescript-eslint/no-confusing-non-null-assertion": "error",
      "@typescript-eslint/no-confusing-void-expression": [
        "error",
        {
          "ignoreArrowShorthand": true,
          "ignoreVoidOperator": true,
        },
      ],
      "@typescript-eslint/no-deprecated": "error",
      "@typescript-eslint/no-dynamic-delete": "error",
      "@typescript-eslint/no-empty-function": [
        "error",
        {
          "allow": [
            "arrowFunctions",
            "functions",
            "methods",
          ],
        },
      ],
      "@typescript-eslint/no-extraneous-class": [
        "error",
        {
          "allowWithDecorator": true,
        },
      ],
      "@typescript-eslint/no-floating-promises": "error",
      "@typescript-eslint/no-import-type-side-effects": "error",
      "@typescript-eslint/no-invalid-void-type": "error",
      "@typescript-eslint/no-loop-func": "error",
      "@typescript-eslint/no-meaningless-void-operator": [
        "error",
        {
          "checkNever": true,
        },
      ],
      "@typescript-eslint/no-misused-promises": "error",
      "@typescript-eslint/no-misused-spread": "error",
      "@typescript-eslint/no-mixed-enums": "error",
      "@typescript-eslint/no-non-null-asserted-nullish-coalescing": "error",
      "@typescript-eslint/no-non-null-assertion": "error",
      "@typescript-eslint/no-require-imports": "error",
      "@typescript-eslint/no-unnecessary-boolean-literal-compare": "error",
      "@typescript-eslint/no-unnecessary-condition": [
        "error",
        {
          "allowConstantLoopConditions": true,
        },
      ],
      "@typescript-eslint/no-unnecessary-parameter-property-assignment": "error",
      "@typescript-eslint/no-unnecessary-qualifier": "error",
      "@typescript-eslint/no-unnecessary-template-expression": "error",
      "@typescript-eslint/no-unnecessary-type-arguments": "error",
      "@typescript-eslint/no-unnecessary-type-assertion": "error",
      "@typescript-eslint/no-unnecessary-type-conversion": "error",
      "@typescript-eslint/no-unsafe-type-assertion": "error",
      "@typescript-eslint/no-unused-expressions": [
        "error",
        {
          "allowShortCircuit": true,
          "allowTaggedTemplates": true,
        },
      ],
      "@typescript-eslint/no-unused-vars": [
        "error",
        {
          "argsIgnorePattern": "^_",
          "caughtErrorsIgnorePattern": "^_",
          "destructuredArrayIgnorePattern": "^_",
          "varsIgnorePattern": "^_",
        },
      ],
      "@typescript-eslint/no-use-before-define": [
        "error",
        {
          "allowNamedExports": false,
          "classes": false,
          "functions": false,
          "variables": true,
        },
      ],
      "@typescript-eslint/no-useless-constructor": "error",
      "@typescript-eslint/no-useless-default-assignment": "error",
      "@typescript-eslint/no-useless-empty-export": "error",
      "@typescript-eslint/non-nullable-type-assertion-style": "error",
      "@typescript-eslint/only-throw-error": "error",
      "@typescript-eslint/prefer-as-const": "error",
      "@typescript-eslint/prefer-find": "error",
      "@typescript-eslint/prefer-for-of": "error",
      "@typescript-eslint/prefer-function-type": "error",
      "@typescript-eslint/prefer-includes": "error",
      "@typescript-eslint/prefer-literal-enum-member": "error",
      "@typescript-eslint/prefer-nullish-coalescing": "error",
      "@typescript-eslint/prefer-optional-chain": "error",
      "@typescript-eslint/prefer-promise-reject-errors": "error",
      "@typescript-eslint/prefer-readonly": "error",
      "@typescript-eslint/prefer-reduce-type-parameter": "error",
      "@typescript-eslint/prefer-regexp-exec": "error",
      "@typescript-eslint/prefer-return-this-type": "error",
      "@typescript-eslint/prefer-string-starts-ends-with": "error",
      "@typescript-eslint/promise-function-async": "error",
      "@typescript-eslint/related-getter-setter-pairs": "error",
      "@typescript-eslint/require-array-sort-compare": "error",
      "@typescript-eslint/require-await": "off",
      "@typescript-eslint/restrict-plus-operands": "error",
      "@typescript-eslint/restrict-template-expressions": [
        "error",
        {
          "allowNumber": true,
        },
      ],
      "@typescript-eslint/return-await": [
        "error",
        "in-try-catch",
      ],
      "@typescript-eslint/strict-boolean-expressions": [
        "error",
        {
          "allowAny": false,
          "allowNullableBoolean": false,
          "allowNullableNumber": false,
          "allowNullableObject": true,
          "allowNullableString": false,
          "allowNumber": false,
          "allowString": false,
        },
      ],
      "@typescript-eslint/switch-exhaustiveness-check": [
        "error",
        {
          "allowDefaultCaseForExhaustiveSwitch": false,
          "considerDefaultExhaustiveForUnions": true,
          "requireDefaultForNonUnion": false,
        },
      ],
      "@typescript-eslint/triple-slash-reference": [
        "error",
        {
          "lib": "never",
          "path": "never",
          "types": "never",
        },
      ],
      "@typescript-eslint/unified-signatures": [
        "error",
        {
          "ignoreDifferentlyNamedParameters": false,
        },
      ],
      "@typescript-eslint/use-unknown-in-catch-callback-variable": "error",
    },
  },
  {
    "files": [
      "**/*.d.ts",
    ],
    "rules": {
      "@typescript-eslint/no-unused-vars": "off",
    },
  },
  {
    "files": [
      "**/*.{test,spec,stories}.{ts,tsx}",
    ],
    "rules": {
      "@typescript-eslint/no-explicit-any": "off",
      "@typescript-eslint/no-non-null-assertion": "off",
      "@typescript-eslint/no-unsafe-argument": "off",
      "@typescript-eslint/no-unsafe-assignment": "off",
      "@typescript-eslint/no-unsafe-return": "off",
      "@typescript-eslint/no-unsafe-type-assertion": "off",
      "@typescript-eslint/unbound-method": "off",
    },
  },
  {
    "files": [
      "**/*.{js,jsx,mjs,cjs}",
    ],
    "languageOptions": {
      "parserOptions": {
        "program": null,
        "project": false,
        "projectService": false,
      },
    },
    "name": "UserConfig[0][4] > typescript-eslint/disable-type-checked",
    "rules": {
      "@typescript-eslint/await-thenable": "off",
      "@typescript-eslint/consistent-return": "off",
      "@typescript-eslint/consistent-type-exports": "off",
      "@typescript-eslint/dot-notation": "off",
      "@typescript-eslint/naming-convention": "off",
      "@typescript-eslint/no-array-delete": "off",
      "@typescript-eslint/no-base-to-string": "off",
      "@typescript-eslint/no-confusing-void-expression": "off",
      "@typescript-eslint/no-deprecated": "off",
      "@typescript-eslint/no-duplicate-type-constituents": "off",
      "@typescript-eslint/no-floating-promises": "off",
      "@typescript-eslint/no-for-in-array": "off",
      "@typescript-eslint/no-implied-eval": "off",
      "@typescript-eslint/no-meaningless-void-operator": "off",
      "@typescript-eslint/no-misused-promises": "off",
      "@typescript-eslint/no-misused-spread": "off",
      "@typescript-eslint/no-mixed-enums": "off",
      "@typescript-eslint/no-redundant-type-constituents": "off",
      "@typescript-eslint/no-unnecessary-boolean-literal-compare": "off",
      "@typescript-eslint/no-unnecessary-condition": "off",
      "@typescript-eslint/no-unnecessary-qualifier": "off",
      "@typescript-eslint/no-unnecessary-template-expression": "off",
      "@typescript-eslint/no-unnecessary-type-arguments": "off",
      "@typescript-eslint/no-unnecessary-type-assertion": "off",
      "@typescript-eslint/no-unnecessary-type-conversion": "off",
      "@typescript-eslint/no-unnecessary-type-parameters": "off",
      "@typescript-eslint/no-unsafe-argument": "off",
      "@typescript-eslint/no-unsafe-assignment": "off",
      "@typescript-eslint/no-unsafe-call": "off",
      "@typescript-eslint/no-unsafe-enum-comparison": "off",
      "@typescript-eslint/no-unsafe-member-access": "off",
      "@typescript-eslint/no-unsafe-return": "off",
      "@typescript-eslint/no-unsafe-type-assertion": "off",
      "@typescript-eslint/no-unsafe-unary-minus": "off",
      "@typescript-eslint/no-useless-default-assignment": "off",
      "@typescript-eslint/non-nullable-type-assertion-style": "off",
      "@typescript-eslint/only-throw-error": "off",
      "@typescript-eslint/prefer-destructuring": "off",
      "@typescript-eslint/prefer-find": "off",
      "@typescript-eslint/prefer-includes": "off",
      "@typescript-eslint/prefer-nullish-coalescing": "off",
      "@typescript-eslint/prefer-optional-chain": "off",
      "@typescript-eslint/prefer-promise-reject-errors": "off",
      "@typescript-eslint/prefer-readonly": "off",
      "@typescript-eslint/prefer-readonly-parameter-types": "off",
      "@typescript-eslint/prefer-reduce-type-parameter": "off",
      "@typescript-eslint/prefer-regexp-exec": "off",
      "@typescript-eslint/prefer-return-this-type": "off",
      "@typescript-eslint/prefer-string-starts-ends-with": "off",
      "@typescript-eslint/promise-function-async": "off",
      "@typescript-eslint/related-getter-setter-pairs": "off",
      "@typescript-eslint/require-array-sort-compare": "off",
      "@typescript-eslint/require-await": "off",
      "@typescript-eslint/restrict-plus-operands": "off",
      "@typescript-eslint/restrict-template-expressions": "off",
      "@typescript-eslint/return-await": "off",
      "@typescript-eslint/strict-boolean-expressions": "off",
      "@typescript-eslint/strict-void-return": "off",
      "@typescript-eslint/switch-exhaustiveness-check": "off",
      "@typescript-eslint/unbound-method": "off",
      "@typescript-eslint/use-unknown-in-catch-callback-variable": "off",
    },
  },
  {
    "files": [
      "**/*.{js,jsx,mjs,cjs}",
    ],
  },
  {
    "plugins": [
      "@stylistic",
    ],
    "rules": {
      "@stylistic/array-bracket-spacing": [
        "error",
        "never",
      ],
      "@stylistic/arrow-parens": [
        "error",
        "as-needed",
        {
          "requireForBlockBody": true,
        },
      ],
      "@stylistic/arrow-spacing": [
        "error",
        {
          "after": true,
          "before": true,
        },
      ],
      "@stylistic/block-spacing": [
        "error",
        "always",
      ],
      "@stylistic/brace-style": [
        "error",
        "stroustrup",
        {
          "allowSingleLine": true,
        },
      ],
      "@stylistic/comma-dangle": [
        "error",
        "always-multiline",
      ],
      "@stylistic/comma-spacing": [
        "error",
        {
          "after": true,
          "before": false,
        },
      ],
      "@stylistic/comma-style": [
        "error",
        "last",
      ],
      "@stylistic/computed-property-spacing": [
        "error",
        "never",
        {
          "enforceForClassMembers": true,
        },
      ],
      "@stylistic/dot-location": [
        "error",
        "property",
      ],
      "@stylistic/eol-last": "error",
      "@stylistic/generator-star-spacing": [
        "error",
        {
          "after": true,
          "before": false,
        },
      ],
      "@stylistic/indent": [
        "error",
        2,
        {
          "ArrayExpression": 1,
          "CallExpression": {
            "arguments": 1,
          },
          "FunctionDeclaration": {
            "body": 1,
            "parameters": 1,
            "returnType": 1,
          },
          "FunctionExpression": {
            "body": 1,
            "parameters": 1,
            "returnType": 1,
          },
          "ImportDeclaration": 1,
          "MemberExpression": 1,
          "ObjectExpression": 1,
          "SwitchCase": 1,
          "VariableDeclarator": 1,
          "flatTernaryExpressions": false,
          "ignoreComments": false,
          "ignoredNodes": [
            "TSUnionType",
            "TSIntersectionType",
          ],
          "offsetTernaryExpressions": true,
          "outerIIFEBody": 1,
          "tabLength": 2,
        },
      ],
      "@stylistic/indent-binary-ops": [
        "error",
        2,
      ],
      "@stylistic/jsx-closing-bracket-location": "error",
      "@stylistic/jsx-closing-tag-location": "error",
      "@stylistic/jsx-curly-brace-presence": [
        "error",
        {
          "propElementValues": "always",
        },
      ],
      "@stylistic/jsx-curly-newline": "error",
      "@stylistic/jsx-curly-spacing": [
        "error",
        "never",
      ],
      "@stylistic/jsx-equals-spacing": "error",
      "@stylistic/jsx-first-prop-new-line": "error",
      "@stylistic/jsx-function-call-newline": [
        "error",
        "multiline",
      ],
      "@stylistic/jsx-indent-props": [
        "error",
        2,
      ],
      "@stylistic/jsx-max-props-per-line": [
        "error",
        {
          "maximum": 1,
          "when": "multiline",
        },
      ],
      "@stylistic/jsx-one-expression-per-line": [
        "error",
        {
          "allow": "single-child",
        },
      ],
      "@stylistic/jsx-quotes": "error",
      "@stylistic/jsx-tag-spacing": [
        "error",
        {
          "afterOpening": "never",
          "beforeClosing": "never",
          "beforeSelfClosing": "always",
          "closingSlash": "never",
        },
      ],
      "@stylistic/jsx-wrap-multilines": [
        "error",
        {
          "arrow": "parens-new-line",
          "assignment": "parens-new-line",
          "condition": "parens-new-line",
          "declaration": "parens-new-line",
          "logical": "parens-new-line",
          "prop": "parens-new-line",
          "propertyValue": "parens-new-line",
          "return": "parens-new-line",
        },
      ],
      "@stylistic/key-spacing": [
        "error",
        {
          "afterColon": true,
          "beforeColon": false,
        },
      ],
      "@stylistic/keyword-spacing": [
        "error",
        {
          "after": true,
          "before": true,
        },
      ],
      "@stylistic/lines-between-class-members": [
        "error",
        "always",
        {
          "exceptAfterSingleLine": true,
        },
      ],
      "@stylistic/max-statements-per-line": [
        "error",
        {
          "max": 1,
        },
      ],
      "@stylistic/member-delimiter-style": [
        "error",
        {
          "multiline": {
            "delimiter": "semi",
            "requireLast": true,
          },
          "multilineDetection": "brackets",
          "overrides": {
            "interface": {
              "multiline": {
                "delimiter": "semi",
                "requireLast": true,
              },
            },
          },
          "singleline": {
            "delimiter": "semi",
          },
        },
      ],
      "@stylistic/multiline-ternary": [
        "error",
        "always-multiline",
      ],
      "@stylistic/new-parens": "error",
      "@stylistic/no-extra-parens": [
        "error",
        "functions",
      ],
      "@stylistic/no-floating-decimal": "error",
      "@stylistic/no-mixed-operators": [
        "error",
        {
          "allowSamePrecedence": true,
          "groups": [
            [
              "==",
              "!=",
              "===",
              "!==",
              ">",
              ">=",
              "<",
              "<=",
            ],
            [
              "&&",
              "||",
            ],
            [
              "in",
              "instanceof",
            ],
          ],
        },
      ],
      "@stylistic/no-mixed-spaces-and-tabs": "error",
      "@stylistic/no-multi-spaces": "error",
      "@stylistic/no-multiple-empty-lines": [
        "error",
        {
          "max": 1,
          "maxBOF": 0,
          "maxEOF": 0,
        },
      ],
      "@stylistic/no-tabs": "error",
      "@stylistic/no-trailing-spaces": "error",
      "@stylistic/no-whitespace-before-property": "error",
      "@stylistic/object-curly-spacing": [
        "error",
        "always",
      ],
      "@stylistic/operator-linebreak": [
        "error",
        "before",
      ],
      "@stylistic/padded-blocks": [
        "error",
        {
          "blocks": "never",
          "classes": "never",
          "switches": "never",
        },
      ],
      "@stylistic/quote-props": [
        "error",
        "consistent-as-needed",
      ],
      "@stylistic/quotes": [
        "error",
        "single",
        {
          "allowTemplateLiterals": "always",
          "avoidEscape": false,
        },
      ],
      "@stylistic/rest-spread-spacing": [
        "error",
        "never",
      ],
      "@stylistic/semi": [
        "error",
        "always",
      ],
      "@stylistic/semi-spacing": [
        "error",
        {
          "after": true,
          "before": false,
        },
      ],
      "@stylistic/space-before-blocks": [
        "error",
        "always",
      ],
      "@stylistic/space-before-function-paren": [
        "error",
        {
          "anonymous": "always",
          "asyncArrow": "always",
          "named": "never",
        },
      ],
      "@stylistic/space-in-parens": [
        "error",
        "never",
      ],
      "@stylistic/space-infix-ops": "error",
      "@stylistic/space-unary-ops": [
        "error",
        {
          "nonwords": false,
          "words": true,
        },
      ],
      "@stylistic/spaced-comment": [
        "error",
        "always",
        {
          "block": {
            "balanced": true,
            "exceptions": [
              "*",
            ],
            "markers": [
              "!",
            ],
          },
          "line": {
            "exceptions": [
              "/",
              "#",
            ],
            "markers": [
              "/",
            ],
          },
        },
      ],
      "@stylistic/template-curly-spacing": "error",
      "@stylistic/template-tag-spacing": [
        "error",
        "never",
      ],
      "@stylistic/type-annotation-spacing": [
        "error",
        {},
      ],
      "@stylistic/type-generic-spacing": "error",
      "@stylistic/type-named-tuple-spacing": "error",
      "@stylistic/wrap-iife": [
        "error",
        "any",
        {
          "functionPrototypeMethods": true,
        },
      ],
      "@stylistic/yield-star-spacing": [
        "error",
        {
          "after": true,
          "before": false,
        },
      ],
    },
  },
  {
    "name": "import-x/recommended",
    "plugins": [
      "import-x",
    ],
    "rules": {
      "import-x/default": "error",
      "import-x/export": "error",
      "import-x/named": "error",
      "import-x/namespace": "error",
      "import-x/no-duplicates": "warn",
      "import-x/no-named-as-default": "warn",
      "import-x/no-named-as-default-member": "warn",
      "import-x/no-unresolved": "error",
    },
  },
  {
    "name": "import-x/typescript",
    "plugins": [
      "import-x",
    ],
    "rules": {
      "import-x/named": "off",
    },
    "settings": {
      "import-x/extensions": [
        ".ts",
        ".tsx",
        ".cts",
        ".mts",
        ".js",
        ".jsx",
        ".cjs",
        ".mjs",
      ],
      "import-x/external-module-folders": [
        "node_modules",
        "node_modules/@types",
      ],
      "import-x/parsers": {
        "@typescript-eslint/parser": [
          ".ts",
          ".tsx",
          ".cts",
          ".mts",
        ],
      },
      "import-x/resolver": {
        "typescript": true,
      },
    },
  },
  {
    "plugins": [
      "unused-imports",
    ],
  },
  {
    "rules": {
      "import-x/export": "error",
      "import-x/first": "error",
      "import-x/no-absolute-path": [
        "error",
        {
          "amd": false,
          "commonjs": true,
          "esmodule": true,
        },
      ],
      "import-x/no-duplicates": "error",
      "import-x/no-extraneous-dependencies": "error",
      "import-x/no-named-as-default": "off",
      "import-x/no-named-as-default-member": "off",
      "import-x/no-named-default": "error",
      "import-x/no-webpack-loader-syntax": "error",
      "import-x/order": [
        "error",
        {
          "alphabetize": {
            "caseInsensitive": true,
            "order": "asc",
          },
          "groups": [
            "builtin",
            "external",
            "internal",
            [
              "parent",
              "sibling",
              "index",
            ],
            "type",
          ],
          "newlines-between": "never",
        },
      ],
      "unused-imports/no-unused-imports": "error",
    },
  },
  {
    "name": "promise/flat/recommended",
    "plugins": [
      "promise",
    ],
    "rules": {
      "promise/always-return": "error",
      "promise/avoid-new": "off",
      "promise/catch-or-return": "error",
      "promise/no-callback-in-promise": "warn",
      "promise/no-native": "off",
      "promise/no-nesting": "warn",
      "promise/no-new-statics": "error",
      "promise/no-promise-in-callback": "warn",
      "promise/no-return-in-finally": "warn",
      "promise/no-return-wrap": "error",
      "promise/param-names": "error",
      "promise/valid-params": "warn",
    },
  },
  {
    "rules": {
      "@typescript-eslint/require-await": "off",
      "promise/always-return": [
        "error",
        {
          "ignoreLastCallback": true,
        },
      ],
      "promise/no-multiple-resolved": "error",
      "promise/no-promise-in-callback": "error",
    },
  },
  {
    "plugins": [
      "@eslint-community/eslint-comments",
    ],
    "rules": {
      "@eslint-community/eslint-comments/disable-enable-pair": [
        "error",
        {
          "allowWholeFile": true,
        },
      ],
      "@eslint-community/eslint-comments/no-aggregating-enable": "error",
      "@eslint-community/eslint-comments/no-duplicate-disable": "error",
      "@eslint-community/eslint-comments/no-unlimited-disable": "error",
      "@eslint-community/eslint-comments/no-unused-enable": "error",
      "@eslint-community/eslint-comments/require-description": [
        "error",
        {
          "ignore": [
            "eslint-enable",
            "eslint-env",
          ],
        },
      ],
    },
  },
  {
    "languageOptions": {
      "globals": {
        "AbortController": false,
        "AbortSignal": false,
        "AggregateError": false,
        "Array": false,
        "ArrayBuffer": false,
        "Atomics": false,
        "BigInt": false,
        "BigInt64Array": false,
        "BigUint64Array": false,
        "Blob": false,
        "Boolean": false,
        "BroadcastChannel": false,
        "Buffer": false,
        "ByteLengthQueuingStrategy": false,
        "CloseEvent": false,
        "CompressionStream": false,
        "CountQueuingStrategy": false,
        "Crypto": false,
        "CryptoKey": false,
        "CustomEvent": false,
        "DOMException": false,
        "DataView": false,
        "Date": false,
        "DecompressionStream": false,
        "Error": false,
        "EvalError": false,
        "Event": false,
        "EventTarget": false,
        "File": false,
        "FinalizationRegistry": false,
        "Float32Array": false,
        "Float64Array": false,
        "FormData": false,
        "Function": false,
        "Headers": false,
        "Infinity": false,
        "Int16Array": false,
        "Int32Array": false,
        "Int8Array": false,
        "Intl": false,
        "JSON": false,
        "Map": false,
        "Math": false,
        "MessageChannel": false,
        "MessageEvent": false,
        "MessagePort": false,
        "NaN": false,
        "Navigator": false,
        "Number": false,
        "Object": false,
        "Performance": false,
        "PerformanceEntry": false,
        "PerformanceMark": false,
        "PerformanceMeasure": false,
        "PerformanceObserver": false,
        "PerformanceObserverEntryList": false,
        "PerformanceResourceTiming": false,
        "Promise": false,
        "Proxy": false,
        "RangeError": false,
        "ReadableByteStreamController": false,
        "ReadableStream": false,
        "ReadableStreamBYOBReader": false,
        "ReadableStreamBYOBRequest": false,
        "ReadableStreamDefaultController": false,
        "ReadableStreamDefaultReader": false,
        "ReferenceError": false,
        "Reflect": false,
        "RegExp": false,
        "Request": false,
        "Response": false,
        "Set": false,
        "SharedArrayBuffer": false,
        "String": false,
        "SubtleCrypto": false,
        "Symbol": false,
        "SyntaxError": false,
        "TextDecoder": false,
        "TextDecoderStream": false,
        "TextEncoder": false,
        "TextEncoderStream": false,
        "TransformStream": false,
        "TransformStreamDefaultController": false,
        "TypeError": false,
        "URIError": false,
        "URL": false,
        "URLSearchParams": false,
        "Uint16Array": false,
        "Uint32Array": false,
        "Uint8Array": false,
        "Uint8ClampedArray": false,
        "WeakMap": false,
        "WeakRef": false,
        "WeakSet": false,
        "WebAssembly": false,
        "WebSocket": false,
        "WritableStream": false,
        "WritableStreamDefaultController": false,
        "WritableStreamDefaultWriter": false,
        "__dirname": "off",
        "__filename": "off",
        "atob": false,
        "btoa": false,
        "clearImmediate": false,
        "clearInterval": false,
        "clearTimeout": false,
        "console": false,
        "crypto": false,
        "decodeURI": false,
        "decodeURIComponent": false,
        "encodeURI": false,
        "encodeURIComponent": false,
        "escape": false,
        "eval": false,
        "exports": "off",
        "fetch": false,
        "global": false,
        "globalThis": false,
        "isFinite": false,
        "isNaN": false,
        "module": "off",
        "navigator": false,
        "parseFloat": false,
        "parseInt": false,
        "performance": false,
        "process": false,
        "queueMicrotask": false,
        "require": "off",
        "setImmediate": false,
        "setInterval": false,
        "setTimeout": false,
        "structuredClone": false,
        "undefined": false,
        "unescape": false,
      },
      "sourceType": "module",
    },
    "name": "node/flat/recommended-module",
    "plugins": [
      "n",
    ],
    "rules": {
      "n/hashbang": "error",
      "n/no-deprecated-api": "error",
      "n/no-exports-assign": "error",
      "n/no-extraneous-import": "error",
      "n/no-extraneous-require": "error",
      "n/no-missing-import": "error",
      "n/no-missing-require": "error",
      "n/no-process-exit": "error",
      "n/no-unpublished-bin": "error",
      "n/no-unpublished-import": "error",
      "n/no-unpublished-require": "error",
      "n/no-unsupported-features/es-builtins": "error",
      "n/no-unsupported-features/es-syntax": [
        "error",
        {
          "ignores": [
            "modules",
          ],
        },
      ],
      "n/no-unsupported-features/node-builtins": "error",
      "n/process-exit-as-throw": "error",
    },
  },
  {
    "rules": {
      "n/handle-callback-err": [
        "error",
        "^(err|error)$",
      ],
      "n/no-callback-literal": "error",
      "n/no-deprecated-api": "error",
      "n/no-exports-assign": "error",
      "n/no-missing-import": "off",
      "n/no-new-require": "error",
      "n/no-path-concat": "error",
      "n/no-unpublished-import": "off",
      "n/process-exit-as-throw": "error",
    },
  },
  {
    "files": [
      "src/index.ts",
    ],
    "rules": {
      "n/hashbang": "off",
      "n/no-process-exit": "off",
    },
  },
  {
    "files": [
      "*.config.{js,mjs,ts}",
    ],
    "rules": {
      "n/no-extraneous-import": "off",
    },
  },
]
`;

exports[`buildConfig > should generate correct config for common ruleSet only 1`] = `
[
  {
    "languageOptions": {
      "globals": {
        "AbortController": false,
        "AbortSignal": false,
        "AsyncDisposableStack": false,
        "Blob": false,
        "BroadcastChannel": false,
        "Buffer": false,
        "ByteLengthQueuingStrategy": false,
        "CloseEvent": false,
        "CompressionStream": false,
        "CountQueuingStrategy": false,
        "Crypto": false,
        "CryptoKey": false,
        "CustomEvent": false,
        "DOMException": false,
        "DecompressionStream": false,
        "DisposableStack": false,
        "ErrorEvent": false,
        "Event": false,
        "EventTarget": false,
        "File": false,
        "FormData": false,
        "Headers": false,
        "MessageChannel": false,
        "MessageEvent": false,
        "MessagePort": false,
        "Navigator": false,
        "Performance": false,
        "PerformanceEntry": false,
        "PerformanceMark": false,
        "PerformanceMeasure": false,
        "PerformanceObserver": false,
        "PerformanceObserverEntryList": false,
        "PerformanceResourceTiming": false,
        "ReadableByteStreamController": false,
        "ReadableStream": false,
        "ReadableStreamBYOBReader": false,
        "ReadableStreamBYOBRequest": false,
        "ReadableStreamDefaultController": false,
        "ReadableStreamDefaultReader": false,
        "Request": false,
        "Response": false,
        "Storage": false,
        "SubtleCrypto": false,
        "SuppressedError": false,
        "TextDecoder": false,
        "TextDecoderStream": false,
        "TextEncoder": false,
        "TextEncoderStream": false,
        "TransformStream": false,
        "TransformStreamDefaultController": false,
        "URL": false,
        "URLPattern": false,
        "URLSearchParams": false,
        "WebAssembly": false,
        "WebSocket": false,
        "WritableStream": false,
        "WritableStreamDefaultController": false,
        "WritableStreamDefaultWriter": false,
        "__dirname": false,
        "__filename": false,
        "atob": false,
        "btoa": false,
        "clearImmediate": false,
        "clearInterval": false,
        "clearTimeout": false,
        "console": false,
        "crypto": false,
        "exports": true,
        "fetch": false,
        "global": false,
        "localStorage": false,
        "module": false,
        "navigator": false,
        "performance": false,
        "process": false,
        "queueMicrotask": false,
        "require": false,
        "sessionStorage": false,
        "setImmediate": false,
        "setInterval": false,
        "setTimeout": false,
        "structuredClone": false,
      },
      "parserOptions": {
        "projectService": false,
        "sourceType": "module",
      },
    },
  },
  {
    "files": [
      "**/*.{ts,tsx}",
    ],
    "languageOptions": {
      "parserOptions": {
        "projectService": true,
      },
    },
  },
  {
    "rules": {
      "constructor-super": "error",
      "for-direction": "error",
      "getter-return": "error",
      "no-async-promise-executor": "error",
      "no-case-declarations": "error",
      "no-class-assign": "error",
      "no-compare-neg-zero": "error",
      "no-cond-assign": "error",
      "no-const-assign": "error",
      "no-constant-binary-expression": "error",
      "no-constant-condition": "error",
      "no-control-regex": "error",
      "no-debugger": "error",
      "no-delete-var": "error",
      "no-dupe-args": "error",
      "no-dupe-class-members": "error",
      "no-dupe-else-if": "error",
      "no-dupe-keys": "error",
      "no-duplicate-case": "error",
      "no-empty": "error",
      "no-empty-character-class": "error",
      "no-empty-pattern": "error",
      "no-empty-static-block": "error",
      "no-ex-assign": "error",
      "no-extra-boolean-cast": "error",
      "no-fallthrough": "error",
      "no-func-assign": "error",
      "no-global-assign": "error",
      "no-import-assign": "error",
      "no-invalid-regexp": "error",
      "no-irregular-whitespace": "error",
      "no-loss-of-precision": "error",
      "no-misleading-character-class": "error",
      "no-new-native-nonconstructor": "error",
      "no-nonoctal-decimal-escape": "error",
      "no-obj-calls": "error",
      "no-octal": "error",
      "no-prototype-builtins": "error",
      "no-redeclare": "error",
      "no-regex-spaces": "error",
      "no-self-assign": "error",
      "no-setter-return": "error",
      "no-shadow-restricted-names": "error",
      "no-sparse-arrays": "error",
      "no-this-before-super": "error",
      "no-undef": "error",
      "no-unexpected-multiline": "error",
      "no-unreachable": "error",
      "no-unsafe-finally": "error",
      "no-unsafe-negation": "error",
      "no-unsafe-optional-chaining": "error",
      "no-unused-labels": "error",
      "no-unused-private-class-members": "error",
      "no-unused-vars": "error",
      "no-useless-backreference": "error",
      "no-useless-catch": "error",
      "no-useless-escape": "error",
      "no-with": "error",
      "require-yield": "error",
      "use-isnan": "error",
      "valid-typeof": "error",
    },
  },
  {
    "rules": {
      "accessor-pairs": [
        "error",
        {
          "enforceForClassMembers": true,
          "getWithoutSet": false,
          "setWithoutGet": true,
        },
      ],
      "array-callback-return": [
        "error",
        {
          "allowImplicit": false,
          "allowVoid": false,
          "checkForEach": false,
        },
      ],
      "complexity": [
        "error",
        {
          "max": 20,
          "variant": "modified",
        },
      ],
      "consistent-this": [
        "error",
        "that",
      ],
      "constructor-super": "error",
      "curly": [
        "error",
        "multi-line",
      ],
      "default-case-last": "error",
      "eqeqeq": [
        "error",
        "always",
      ],
      "grouped-accessor-pairs": [
        "error",
        "getBeforeSet",
      ],
      "guard-for-in": "error",
      "logical-assignment-operators": [
        "error",
        "always",
        {
          "enforceForIfStatements": true,
        },
      ],
      "max-depth": [
        "error",
        {
          "max": 5,
        },
      ],
      "max-lines": [
        "error",
        {
          "max": 400,
          "skipBlankLines": true,
          "skipComments": true,
        },
      ],
      "max-nested-callbacks": [
        "error",
        {
          "max": 3,
        },
      ],
      "new-cap": [
        "error",
        {
          "capIsNew": false,
          "newIsCap": true,
          "properties": true,
        },
      ],
      "no-alert": "error",
      "no-caller": "error",
      "no-cond-assign": [
        "error",
        "always",
      ],
      "no-console": [
        "error",
      ],
      "no-constant-condition": [
        "error",
        {
          "checkLoops": false,
        },
      ],
      "no-constructor-return": [
        "error",
      ],
      "no-empty": [
        "error",
        {
          "allowEmptyCatch": true,
        },
      ],
      "no-eval": "error",
      "no-extend-native": "error",
      "no-extra-bind": "error",
      "no-implicit-globals": [
        "error",
      ],
      "no-inner-declarations": [
        "error",
        "both",
        {
          "blockScopedFunctions": "disallow",
        },
      ],
      "no-iterator": "error",
      "no-labels": [
        "error",
        {
          "allowLoop": false,
          "allowSwitch": false,
        },
      ],
      "no-lone-blocks": "error",
      "no-lonely-if": "error",
      "no-multi-assign": [
        "error",
        {
          "ignoreNonDeclaration": false,
        },
      ],
      "no-multi-str": "error",
      "no-new": "error",
      "no-new-func": "error",
      "no-new-wrappers": "error",
      "no-object-constructor": "error",
      "no-octal-escape": "error",
      "no-param-reassign": "error",
      "no-plusplus": "error",
      "no-promise-executor-return": [
        "error",
        {
          "allowVoid": false,
        },
      ],
      "no-proto": "error",
      "no-restricted-globals": [
        "error",
        {
          "message": "Use local parameter instead.",
          "name": "event",
        },
        {
          "message": "Do not commit fdescribe.",
          "name": "fdescribe",
        },
      ],
      "no-restricted-imports": [
        "error",
        {
          "patterns": [
            {
              "group": [
                "../",
              ],
              "message": "Use absolute paths starting with @",
            },
          ],
        },
      ],
      "no-return-assign": [
        "error",
        "always",
      ],
      "no-script-url": "error",
      "no-self-assign": [
        "error",
        {
          "props": true,
        },
      ],
      "no-self-compare": "error",
      "no-sequences": [
        "error",
        {
          "allowInParentheses": false,
        },
      ],
      "no-template-curly-in-string": "error",
      "no-unmodified-loop-condition": "error",
      "no-unneeded-ternary": [
        "error",
        {
          "defaultAssignment": false,
        },
      ],
      "no-unreachable-loop": [
        "error",
      ],
      "no-useless-assignment": "error",
      "no-useless-call": "error",
      "no-useless-computed-key": "error",
      "no-useless-concat": "error",
      "no-useless-rename": "error",
      "no-useless-return": "error",
      "no-var": "error",
      "no-void": [
        "error",
        {
          "allowAsStatement": true,
        },
      ],
      "object-shorthand": [
        "error",
        "properties",
        {
          "avoidQuotes": true,
        },
      ],
      "one-var": [
        "error",
        {
          "initialized": "never",
        },
      ],
      "operator-assignment": [
        "error",
        "always",
      ],
      "prefer-arrow-callback": [
        "error",
        {
          "allowNamedFunctions": true,
          "allowUnboundThis": true,
        },
      ],
      "prefer-const": [
        "error",
        {
          "destructuring": "all",
          "ignoreReadBeforeAssign": false,
        },
      ],
      "prefer-exponentiation-operator": "error",
      "prefer-numeric-literals": "error",
      "prefer-object-has-own": "error",
      "prefer-object-spread": "error",
      "prefer-regex-literals": [
        "error",
        {
          "disallowRedundantWrapping": true,
        },
      ],
      "prefer-template": "error",
      "radix": [
        "error",
        "always",
      ],
      "symbol-description": "error",
      "unicode-bom": [
        "error",
        "never",
      ],
      "use-isnan": [
        "error",
        {
          "enforceForIndexOf": true,
          "enforceForSwitchCase": true,
        },
      ],
      "valid-typeof": [
        "error",
        {
          "requireStringLiterals": true,
        },
      ],
      "yoda": [
        "error",
        "never",
      ],
    },
  },
  {
    "files": [
      "**/*.{test,spec}.{ts,tsx,js,jsx}",
    ],
    "rules": {
      "max-lines": [
        "error",
        {
          "max": 900,
          "skipBlankLines": true,
          "skipComments": true,
        },
      ],
      "max-nested-callbacks": [
        "error",
        {
          "max": 4,
        },
      ],
      "no-console": "off",
    },
  },
  {
    "files": [
      "src/index.ts",
    ],
    "rules": {
      "no-console": "off",
    },
  },
  {
    "files": [
      "**/*.config.{js,mjs,ts}",
    ],
    "rules": {
      "no-restricted-imports": "off",
    },
  },
  {
    "languageOptions": {
      "parser": "[Parser]",
      "sourceType": "module",
    },
    "name": "typescript-eslint/base",
    "plugins": [
      "@typescript-eslint",
    ],
  },
  {
    "files": [
      "**/*.ts",
      "**/*.tsx",
      "**/*.mts",
      "**/*.cts",
    ],
    "name": "typescript-eslint/eslint-recommended",
    "rules": {
      "constructor-super": "off",
      "getter-return": "off",
      "no-class-assign": "off",
      "no-const-assign": "off",
      "no-dupe-args": "off",
      "no-dupe-class-members": "off",
      "no-dupe-keys": "off",
      "no-func-assign": "off",
      "no-import-assign": "off",
      "no-new-native-nonconstructor": "off",
      "no-new-symbol": "off",
      "no-obj-calls": "off",
      "no-redeclare": "off",
      "no-setter-return": "off",
      "no-this-before-super": "off",
      "no-undef": "off",
      "no-unreachable": "off",
      "no-unsafe-negation": "off",
      "no-var": "error",
      "no-with": "off",
      "prefer-const": "error",
      "prefer-rest-params": "error",
      "prefer-spread": "error",
    },
  },
  {
    "name": "typescript-eslint/recommended-type-checked",
    "rules": {
      "@typescript-eslint/await-thenable": "error",
      "@typescript-eslint/ban-ts-comment": "error",
      "@typescript-eslint/no-array-constructor": "error",
      "@typescript-eslint/no-array-delete": "error",
      "@typescript-eslint/no-base-to-string": "error",
      "@typescript-eslint/no-duplicate-enum-values": "error",
      "@typescript-eslint/no-duplicate-type-constituents": "error",
      "@typescript-eslint/no-empty-object-type": "error",
      "@typescript-eslint/no-explicit-any": "error",
      "@typescript-eslint/no-extra-non-null-assertion": "error",
      "@typescript-eslint/no-floating-promises": "error",
      "@typescript-eslint/no-for-in-array": "error",
      "@typescript-eslint/no-implied-eval": "error",
      "@typescript-eslint/no-misused-new": "error",
      "@typescript-eslint/no-misused-promises": "error",
      "@typescript-eslint/no-namespace": "error",
      "@typescript-eslint/no-non-null-asserted-optional-chain": "error",
      "@typescript-eslint/no-redundant-type-constituents": "error",
      "@typescript-eslint/no-require-imports": "error",
      "@typescript-eslint/no-this-alias": "error",
      "@typescript-eslint/no-unnecessary-type-assertion": "error",
      "@typescript-eslint/no-unnecessary-type-constraint": "error",
      "@typescript-eslint/no-unsafe-argument": "error",
      "@typescript-eslint/no-unsafe-assignment": "error",
      "@typescript-eslint/no-unsafe-call": "error",
      "@typescript-eslint/no-unsafe-declaration-merging": "error",
      "@typescript-eslint/no-unsafe-enum-comparison": "error",
      "@typescript-eslint/no-unsafe-function-type": "error",
      "@typescript-eslint/no-unsafe-member-access": "error",
      "@typescript-eslint/no-unsafe-return": "error",
      "@typescript-eslint/no-unsafe-unary-minus": "error",
      "@typescript-eslint/no-unused-expressions": "error",
      "@typescript-eslint/no-unused-vars": "error",
      "@typescript-eslint/no-wrapper-object-types": "error",
      "@typescript-eslint/only-throw-error": "error",
      "@typescript-eslint/prefer-as-const": "error",
      "@typescript-eslint/prefer-namespace-keyword": "error",
      "@typescript-eslint/prefer-promise-reject-errors": "error",
      "@typescript-eslint/require-await": "error",
      "@typescript-eslint/restrict-plus-operands": "error",
      "@typescript-eslint/restrict-template-expressions": "error",
      "@typescript-eslint/triple-slash-reference": "error",
      "@typescript-eslint/unbound-method": "error",
      "no-array-constructor": "off",
      "no-implied-eval": "off",
      "no-throw-literal": "off",
      "no-unused-expressions": "off",
      "no-unused-vars": "off",
      "prefer-promise-reject-errors": "off",
      "require-await": "off",
    },
  },
  {
    "rules": {
      "@typescript-eslint/adjacent-overload-signatures": "error",
      "@typescript-eslint/array-type": [
        "error",
        {
          "default": "array-simple",
        },
      ],
      "@typescript-eslint/await-thenable": "error",
      "@typescript-eslint/ban-ts-comment": [
        "error",
        {
          "minimumDescriptionLength": 3,
          "ts-check": false,
          "ts-expect-error": "allow-with-description",
          "ts-ignore": true,
          "ts-nocheck": true,
        },
      ],
      "@typescript-eslint/ban-tslint-comment": "error",
      "@typescript-eslint/class-literal-property-style": [
        "error",
        "fields",
      ],
      "@typescript-eslint/consistent-generic-constructors": [
        "error",
        "constructor",
      ],
      "@typescript-eslint/consistent-indexed-object-style": [
        "error",
        "record",
      ],
      "@typescript-eslint/consistent-type-assertions": [
        "error",
        {
          "assertionStyle": "as",
          "objectLiteralTypeAssertions": "never",
        },
      ],
      "@typescript-eslint/consistent-type-definitions": "off",
      "@typescript-eslint/consistent-type-exports": [
        "error",
        {
          "fixMixedExportsWithInlineTypeSpecifier": true,
        },
      ],
      "@typescript-eslint/consistent-type-imports": [
        "error",
        {
          "disallowTypeAnnotations": true,
          "fixStyle": "inline-type-imports",
          "prefer": "type-imports",
        },
      ],
      "@typescript-eslint/dot-notation": [
        "error",
        {
          "allowIndexSignaturePropertyAccess": false,
          "allowKeywords": true,
          "allowPrivateClassPropertyAccess": false,
          "allowProtectedClassPropertyAccess": false,
        },
      ],
      "@typescript-eslint/max-params": [
        "error",
        {
          "max": 4,
        },
      ],
      "@typescript-eslint/method-signature-style": [
        "error",
        "property",
      ],
      "@typescript-eslint/naming-convention": [
        "error",
        {
          "format": [
            "camelCase",
          ],
          "leadingUnderscore": "allow",
          "selector": "default",
          "trailingUnderscore": "allow",
        },
        {
          "format": [
            "camelCase",
            "PascalCase",
          ],
          "selector": "import",
        },
        {
          "format": [
            "camelCase",
            "UPPER_CASE",
          ],
          "leadingUnderscore": "allow",
          "selector": "variable",
          "trailingUnderscore": "allow",
        },
        {
          "format": [
            "PascalCase",
          ],
          "selector": "typeLike",
        },
        {
          "format": [
            "PascalCase",
          ],
          "selector": "enumMember",
        },
        {
          "format": null,
          "selector": "objectLiteralProperty",
        },
        {
          "format": null,
          "selector": "typeProperty",
        },
      ],
      "@typescript-eslint/no-confusing-non-null-assertion": "error",
      "@typescript-eslint/no-confusing-void-expression": [
        "error",
        {
          "ignoreArrowShorthand": true,
          "ignoreVoidOperator": true,
        },
      ],
      "@typescript-eslint/no-deprecated": "error",
      "@typescript-eslint/no-dynamic-delete": "error",
      "@typescript-eslint/no-empty-function": [
        "error",
        {
          "allow": [
            "arrowFunctions",
            "functions",
            "methods",
          ],
        },
      ],
      "@typescript-eslint/no-extraneous-class": [
        "error",
        {
          "allowWithDecorator": true,
        },
      ],
      "@typescript-eslint/no-floating-promises": "error",
      "@typescript-eslint/no-import-type-side-effects": "error",
      "@typescript-eslint/no-invalid-void-type": "error",
      "@typescript-eslint/no-loop-func": "error",
      "@typescript-eslint/no-meaningless-void-operator": [
        "error",
        {
          "checkNever": true,
        },
      ],
      "@typescript-eslint/no-misused-promises": "error",
      "@typescript-eslint/no-misused-spread": "error",
      "@typescript-eslint/no-mixed-enums": "error",
      "@typescript-eslint/no-non-null-asserted-nullish-coalescing": "error",
      "@typescript-eslint/no-non-null-assertion": "error",
      "@typescript-eslint/no-require-imports": "error",
      "@typescript-eslint/no-unnecessary-boolean-literal-compare": "error",
      "@typescript-eslint/no-unnecessary-condition": [
        "error",
        {
          "allowConstantLoopConditions": true,
        },
      ],
      "@typescript-eslint/no-unnecessary-parameter-property-assignment": "error",
      "@typescript-eslint/no-unnecessary-qualifier": "error",
      "@typescript-eslint/no-unnecessary-template-expression": "error",
      "@typescript-eslint/no-unnecessary-type-arguments": "error",
      "@typescript-eslint/no-unnecessary-type-assertion": "error",
      "@typescript-eslint/no-unnecessary-type-conversion": "error",
      "@typescript-eslint/no-unsafe-type-assertion": "error",
      "@typescript-eslint/no-unused-expressions": [
        "error",
        {
          "allowShortCircuit": true,
          "allowTaggedTemplates": true,
        },
      ],
      "@typescript-eslint/no-unused-vars": [
        "error",
        {
          "argsIgnorePattern": "^_",
          "caughtErrorsIgnorePattern": "^_",
          "destructuredArrayIgnorePattern": "^_",
          "varsIgnorePattern": "^_",
        },
      ],
      "@typescript-eslint/no-use-before-define": [
        "error",
        {
          "allowNamedExports": false,
          "classes": false,
          "functions": false,
          "variables": true,
        },
      ],
      "@typescript-eslint/no-useless-constructor": "error",
      "@typescript-eslint/no-useless-default-assignment": "error",
      "@typescript-eslint/no-useless-empty-export": "error",
      "@typescript-eslint/non-nullable-type-assertion-style": "error",
      "@typescript-eslint/only-throw-error": "error",
      "@typescript-eslint/prefer-as-const": "error",
      "@typescript-eslint/prefer-find": "error",
      "@typescript-eslint/prefer-for-of": "error",
      "@typescript-eslint/prefer-function-type": "error",
      "@typescript-eslint/prefer-includes": "error",
      "@typescript-eslint/prefer-literal-enum-member": "error",
      "@typescript-eslint/prefer-nullish-coalescing": "error",
      "@typescript-eslint/prefer-optional-chain": "error",
      "@typescript-eslint/prefer-promise-reject-errors": "error",
      "@typescript-eslint/prefer-readonly": "error",
      "@typescript-eslint/prefer-reduce-type-parameter": "error",
      "@typescript-eslint/prefer-regexp-exec": "error",
      "@typescript-eslint/prefer-return-this-type": "error",
      "@typescript-eslint/prefer-string-starts-ends-with": "error",
      "@typescript-eslint/promise-function-async": "error",
      "@typescript-eslint/related-getter-setter-pairs": "error",
      "@typescript-eslint/require-array-sort-compare": "error",
      "@typescript-eslint/require-await": "off",
      "@typescript-eslint/restrict-plus-operands": "error",
      "@typescript-eslint/restrict-template-expressions": [
        "error",
        {
          "allowNumber": true,
        },
      ],
      "@typescript-eslint/return-await": [
        "error",
        "in-try-catch",
      ],
      "@typescript-eslint/strict-boolean-expressions": [
        "error",
        {
          "allowAny": false,
          "allowNullableBoolean": false,
          "allowNullableNumber": false,
          "allowNullableObject": true,
          "allowNullableString": false,
          "allowNumber": false,
          "allowString": false,
        },
      ],
      "@typescript-eslint/switch-exhaustiveness-check": [
        "error",
        {
          "allowDefaultCaseForExhaustiveSwitch": false,
          "considerDefaultExhaustiveForUnions": true,
          "requireDefaultForNonUnion": false,
        },
      ],
      "@typescript-eslint/triple-slash-reference": [
        "error",
        {
          "lib": "never",
          "path": "never",
          "types": "never",
        },
      ],
      "@typescript-eslint/unified-signatures": [
        "error",
        {
          "ignoreDifferentlyNamedParameters": false,
        },
      ],
      "@typescript-eslint/use-unknown-in-catch-callback-variable": "error",
    },
  },
  {
    "files": [
      "**/*.d.ts",
    ],
    "rules": {
      "@typescript-eslint/no-unused-vars": "off",
    },
  },
  {
    "files": [
      "**/*.{test,spec,stories}.{ts,tsx}",
    ],
    "rules": {
      "@typescript-eslint/no-explicit-any": "off",
      "@typescript-eslint/no-non-null-assertion": "off",
      "@typescript-eslint/no-unsafe-argument": "off",
      "@typescript-eslint/no-unsafe-assignment": "off",
      "@typescript-eslint/no-unsafe-return": "off",
      "@typescript-eslint/no-unsafe-type-assertion": "off",
      "@typescript-eslint/unbound-method": "off",
    },
  },
  {
    "files": [
      "**/*.{js,jsx,mjs,cjs}",
    ],
    "languageOptions": {
      "parserOptions": {
        "program": null,
        "project": false,
        "projectService": false,
      },
    },
    "name": "UserConfig[0][4] > typescript-eslint/disable-type-checked",
    "rules": {
      "@typescript-eslint/await-thenable": "off",
      "@typescript-eslint/consistent-return": "off",
      "@typescript-eslint/consistent-type-exports": "off",
      "@typescript-eslint/dot-notation": "off",
      "@typescript-eslint/naming-convention": "off",
      "@typescript-eslint/no-array-delete": "off",
      "@typescript-eslint/no-base-to-string": "off",
      "@typescript-eslint/no-confusing-void-expression": "off",
      "@typescript-eslint/no-deprecated": "off",
      "@typescript-eslint/no-duplicate-type-constituents": "off",
      "@typescript-eslint/no-floating-promises": "off",
      "@typescript-eslint/no-for-in-array": "off",
      "@typescript-eslint/no-implied-eval": "off",
      "@typescript-eslint/no-meaningless-void-operator": "off",
      "@typescript-eslint/no-misused-promises": "off",
      "@typescript-eslint/no-misused-spread": "off",
      "@typescript-eslint/no-mixed-enums": "off",
      "@typescript-eslint/no-redundant-type-constituents": "off",
      "@typescript-eslint/no-unnecessary-boolean-literal-compare": "off",
      "@typescript-eslint/no-unnecessary-condition": "off",
      "@typescript-eslint/no-unnecessary-qualifier": "off",
      "@typescript-eslint/no-unnecessary-template-expression": "off",
      "@typescript-eslint/no-unnecessary-type-arguments": "off",
      "@typescript-eslint/no-unnecessary-type-assertion": "off",
      "@typescript-eslint/no-unnecessary-type-conversion": "off",
      "@typescript-eslint/no-unnecessary-type-parameters": "off",
      "@typescript-eslint/no-unsafe-argument": "off",
      "@typescript-eslint/no-unsafe-assignment": "off",
      "@typescript-eslint/no-unsafe-call": "off",
      "@typescript-eslint/no-unsafe-enum-comparison": "off",
      "@typescript-eslint/no-unsafe-member-access": "off",
      "@typescript-eslint/no-unsafe-return": "off",
      "@typescript-eslint/no-unsafe-type-assertion": "off",
      "@typescript-eslint/no-unsafe-unary-minus": "off",
      "@typescript-eslint/no-useless-default-assignment": "off",
      "@typescript-eslint/non-nullable-type-assertion-style": "off",
      "@typescript-eslint/only-throw-error": "off",
      "@typescript-eslint/prefer-destructuring": "off",
      "@typescript-eslint/prefer-find": "off",
      "@typescript-eslint/prefer-includes": "off",
      "@typescript-eslint/prefer-nullish-coalescing": "off",
      "@typescript-eslint/prefer-optional-chain": "off",
      "@typescript-eslint/prefer-promise-reject-errors": "off",
      "@typescript-eslint/prefer-readonly": "off",
      "@typescript-eslint/prefer-readonly-parameter-types": "off",
      "@typescript-eslint/prefer-reduce-type-parameter": "off",
      "@typescript-eslint/prefer-regexp-exec": "off",
      "@typescript-eslint/prefer-return-this-type": "off",
      "@typescript-eslint/prefer-string-starts-ends-with": "off",
      "@typescript-eslint/promise-function-async": "off",
      "@typescript-eslint/related-getter-setter-pairs": "off",
      "@typescript-eslint/require-array-sort-compare": "off",
      "@typescript-eslint/require-await": "off",
      "@typescript-eslint/restrict-plus-operands": "off",
      "@typescript-eslint/restrict-template-expressions": "off",
      "@typescript-eslint/return-await": "off",
      "@typescript-eslint/strict-boolean-expressions": "off",
      "@typescript-eslint/strict-void-return": "off",
      "@typescript-eslint/switch-exhaustiveness-check": "off",
      "@typescript-eslint/unbound-method": "off",
      "@typescript-eslint/use-unknown-in-catch-callback-variable": "off",
    },
  },
  {
    "files": [
      "**/*.{js,jsx,mjs,cjs}",
    ],
  },
  {
    "plugins": [
      "@stylistic",
    ],
    "rules": {
      "@stylistic/array-bracket-spacing": [
        "error",
        "never",
      ],
      "@stylistic/arrow-parens": [
        "error",
        "as-needed",
        {
          "requireForBlockBody": true,
        },
      ],
      "@stylistic/arrow-spacing": [
        "error",
        {
          "after": true,
          "before": true,
        },
      ],
      "@stylistic/block-spacing": [
        "error",
        "always",
      ],
      "@stylistic/brace-style": [
        "error",
        "stroustrup",
        {
          "allowSingleLine": true,
        },
      ],
      "@stylistic/comma-dangle": [
        "error",
        "always-multiline",
      ],
      "@stylistic/comma-spacing": [
        "error",
        {
          "after": true,
          "before": false,
        },
      ],
      "@stylistic/comma-style": [
        "error",
        "last",
      ],
      "@stylistic/computed-property-spacing": [
        "error",
        "never",
        {
          "enforceForClassMembers": true,
        },
      ],
      "@stylistic/dot-location": [
        "error",
        "property",
      ],
      "@stylistic/eol-last": "error",
      "@stylistic/generator-star-spacing": [
        "error",
        {
          "after": true,
          "before": false,
        },
      ],
      "@stylistic/indent": [
        "error",
        2,
        {
          "ArrayExpression": 1,
          "CallExpression": {
            "arguments": 1,
          },
          "FunctionDeclaration": {
            "body": 1,
            "parameters": 1,
            "returnType": 1,
          },
          "FunctionExpression": {
            "body": 1,
            "parameters": 1,
            "returnType": 1,
          },
          "ImportDeclaration": 1,
          "MemberExpression": 1,
          "ObjectExpression": 1,
          "SwitchCase": 1,
          "VariableDeclarator": 1,
          "flatTernaryExpressions": false,
          "ignoreComments": false,
          "ignoredNodes": [
            "TSUnionType",
            "TSIntersectionType",
          ],
          "offsetTernaryExpressions": true,
          "outerIIFEBody": 1,
          "tabLength": 2,
        },
      ],
      "@stylistic/indent-binary-ops": [
        "error",
        2,
      ],
      "@stylistic/jsx-closing-bracket-location": "error",
      "@stylistic/jsx-closing-tag-location": "error",
      "@stylistic/jsx-curly-brace-presence": [
        "error",
        {
          "propElementValues": "always",
        },
      ],
      "@stylistic/jsx-curly-newline": "error",
      "@stylistic/jsx-curly-spacing": [
        "error",
        "never",
      ],
      "@stylistic/jsx-equals-spacing": "error",
      "@stylistic/jsx-first-prop-new-line": "error",
      "@stylistic/jsx-function-call-newline": [
        "error",
        "multiline",
      ],
      "@stylistic/jsx-indent-props": [
        "error",
        2,
      ],
      "@stylistic/jsx-max-props-per-line": [
        "error",
        {
          "maximum": 1,
          "when": "multiline",
        },
      ],
      "@stylistic/jsx-one-expression-per-line": [
        "error",
        {
          "allow": "single-child",
        },
      ],
      "@stylistic/jsx-quotes": "error",
      "@stylistic/jsx-tag-spacing": [
        "error",
        {
          "afterOpening": "never",
          "beforeClosing": "never",
          "beforeSelfClosing": "always",
          "closingSlash": "never",
        },
      ],
      "@stylistic/jsx-wrap-multilines": [
        "error",
        {
          "arrow": "parens-new-line",
          "assignment": "parens-new-line",
          "condition": "parens-new-line",
          "declaration": "parens-new-line",
          "logical": "parens-new-line",
          "prop": "parens-new-line",
          "propertyValue": "parens-new-line",
          "return": "parens-new-line",
        },
      ],
      "@stylistic/key-spacing": [
        "error",
        {
          "afterColon": true,
          "beforeColon": false,
        },
      ],
      "@stylistic/keyword-spacing": [
        "error",
        {
          "after": true,
          "before": true,
        },
      ],
      "@stylistic/lines-between-class-members": [
        "error",
        "always",
        {
          "exceptAfterSingleLine": true,
        },
      ],
      "@stylistic/max-statements-per-line": [
        "error",
        {
          "max": 1,
        },
      ],
      "@stylistic/member-delimiter-style": [
        "error",
        {
          "multiline": {
            "delimiter": "semi",
            "requireLast": true,
          },
          "multilineDetection": "brackets",
          "overrides": {
            "interface": {
              "multiline": {
                "delimiter": "semi",
                "requireLast": true,
              },
            },
          },
          "singleline": {
            "delimiter": "semi",
          },
        },
      ],
      "@stylistic/multiline-ternary": [
        "error",
        "always-multiline",
      ],
      "@stylistic/new-parens": "error",
      "@stylistic/no-extra-parens": [
        "error",
        "functions",
      ],
      "@stylistic/no-floating-decimal": "error",
      "@stylistic/no-mixed-operators": [
        "error",
        {
          "allowSamePrecedence": true,
          "groups": [
            [
              "==",
              "!=",
              "===",
              "!==",
              ">",
              ">=",
              "<",
              "<=",
            ],
            [
              "&&",
              "||",
            ],
            [
              "in",
              "instanceof",
            ],
          ],
        },
      ],
      "@stylistic/no-mixed-spaces-and-tabs": "error",
      "@stylistic/no-multi-spaces": "error",
      "@stylistic/no-multiple-empty-lines": [
        "error",
        {
          "max": 1,
          "maxBOF": 0,
          "maxEOF": 0,
        },
      ],
      "@stylistic/no-tabs": "error",
      "@stylistic/no-trailing-spaces": "error",
      "@stylistic/no-whitespace-before-property": "error",
      "@stylistic/object-curly-spacing": [
        "error",
        "always",
      ],
      "@stylistic/operator-linebreak": [
        "error",
        "before",
      ],
      "@stylistic/padded-blocks": [
        "error",
        {
          "blocks": "never",
          "classes": "never",
          "switches": "never",
        },
      ],
      "@stylistic/quote-props": [
        "error",
        "consistent-as-needed",
      ],
      "@stylistic/quotes": [
        "error",
        "single",
        {
          "allowTemplateLiterals": "always",
          "avoidEscape": false,
        },
      ],
      "@stylistic/rest-spread-spacing": [
        "error",
        "never",
      ],
      "@stylistic/semi": [
        "error",
        "always",
      ],
      "@stylistic/semi-spacing": [
        "error",
        {
          "after": true,
          "before": false,
        },
      ],
      "@stylistic/space-before-blocks": [
        "error",
        "always",
      ],
      "@stylistic/space-before-function-paren": [
        "error",
        {
          "anonymous": "always",
          "asyncArrow": "always",
          "named": "never",
        },
      ],
      "@stylistic/space-in-parens": [
        "error",
        "never",
      ],
      "@stylistic/space-infix-ops": "error",
      "@stylistic/space-unary-ops": [
        "error",
        {
          "nonwords": false,
          "words": true,
        },
      ],
      "@stylistic/spaced-comment": [
        "error",
        "always",
        {
          "block": {
            "balanced": true,
            "exceptions": [
              "*",
            ],
            "markers": [
              "!",
            ],
          },
          "line": {
            "exceptions": [
              "/",
              "#",
            ],
            "markers": [
              "/",
            ],
          },
        },
      ],
      "@stylistic/template-curly-spacing": "error",
      "@stylistic/template-tag-spacing": [
        "error",
        "never",
      ],
      "@stylistic/type-annotation-spacing": [
        "error",
        {},
      ],
      "@stylistic/type-generic-spacing": "error",
      "@stylistic/type-named-tuple-spacing": "error",
      "@stylistic/wrap-iife": [
        "error",
        "any",
        {
          "functionPrototypeMethods": true,
        },
      ],
      "@stylistic/yield-star-spacing": [
        "error",
        {
          "after": true,
          "before": false,
        },
      ],
    },
  },
  {
    "name": "import-x/recommended",
    "plugins": [
      "import-x",
    ],
    "rules": {
      "import-x/default": "error",
      "import-x/export": "error",
      "import-x/named": "error",
      "import-x/namespace": "error",
      "import-x/no-duplicates": "warn",
      "import-x/no-named-as-default": "warn",
      "import-x/no-named-as-default-member": "warn",
      "import-x/no-unresolved": "error",
    },
  },
  {
    "name": "import-x/typescript",
    "plugins": [
      "import-x",
    ],
    "rules": {
      "import-x/named": "off",
    },
    "settings": {
      "import-x/extensions": [
        ".ts",
        ".tsx",
        ".cts",
        ".mts",
        ".js",
        ".jsx",
        ".cjs",
        ".mjs",
      ],
      "import-x/external-module-folders": [
        "node_modules",
        "node_modules/@types",
      ],
      "import-x/parsers": {
        "@typescript-eslint/parser": [
          ".ts",
          ".tsx",
          ".cts",
          ".mts",
        ],
      },
      "import-x/resolver": {
        "typescript": true,
      },
    },
  },
  {
    "plugins": [
      "unused-imports",
    ],
  },
  {
    "rules": {
      "import-x/export": "error",
      "import-x/first": "error",
      "import-x/no-absolute-path": [
        "error",
        {
          "amd": false,
          "commonjs": true,
          "esmodule": true,
        },
      ],
      "import-x/no-duplicates": "error",
      "import-x/no-extraneous-dependencies": "error",
      "import-x/no-named-as-default": "off",
      "import-x/no-named-as-default-member": "off",
      "import-x/no-named-default": "error",
      "import-x/no-webpack-loader-syntax": "error",
      "import-x/order": [
        "error",
        {
          "alphabetize": {
            "caseInsensitive": true,
            "order": "asc",
          },
          "groups": [
            "builtin",
            "external",
            "internal",
            [
              "parent",
              "sibling",
              "index",
            ],
            "type",
          ],
          "newlines-between": "never",
        },
      ],
      "unused-imports/no-unused-imports": "error",
    },
  },
  {
    "name": "promise/flat/recommended",
    "plugins": [
      "promise",
    ],
    "rules": {
      "promise/always-return": "error",
      "promise/avoid-new": "off",
      "promise/catch-or-return": "error",
      "promise/no-callback-in-promise": "warn",
      "promise/no-native": "off",
      "promise/no-nesting": "warn",
      "promise/no-new-statics": "error",
      "promise/no-promise-in-callback": "warn",
      "promise/no-return-in-finally": "warn",
      "promise/no-return-wrap": "error",
      "promise/param-names": "error",
      "promise/valid-params": "warn",
    },
  },
  {
    "rules": {
      "@typescript-eslint/require-await": "off",
      "promise/always-return": [
        "error",
        {
          "ignoreLastCallback": true,
        },
      ],
      "promise/no-multiple-resolved": "error",
      "promise/no-promise-in-callback": "error",
    },
  },
  {
    "plugins": [
      "@eslint-community/eslint-comments",
    ],
    "rules": {
      "@eslint-community/eslint-comments/disable-enable-pair": [
        "error",
        {
          "allowWholeFile": true,
        },
      ],
      "@eslint-community/eslint-comments/no-aggregating-enable": "error",
      "@eslint-community/eslint-comments/no-duplicate-disable": "error",
      "@eslint-community/eslint-comments/no-unlimited-disable": "error",
      "@eslint-community/eslint-comments/no-unused-enable": "error",
      "@eslint-community/eslint-comments/require-description": [
        "error",
        {
          "ignore": [
            "eslint-enable",
            "eslint-env",
          ],
        },
      ],
    },
  },
]
`;

exports[`buildConfig > should generate correct config for node ruleSet only 1`] = `
[
  {
    "languageOptions": {
      "globals": {
        "AbortController": false,
        "AbortSignal": false,
        "AsyncDisposableStack": false,
        "Blob": false,
        "BroadcastChannel": false,
        "Buffer": false,
        "ByteLengthQueuingStrategy": false,
        "CloseEvent": false,
        "CompressionStream": false,
        "CountQueuingStrategy": false,
        "Crypto": false,
        "CryptoKey": false,
        "CustomEvent": false,
        "DOMException": false,
        "DecompressionStream": false,
        "DisposableStack": false,
        "ErrorEvent": false,
        "Event": false,
        "EventTarget": false,
        "File": false,
        "FormData": false,
        "Headers": false,
        "MessageChannel": false,
        "MessageEvent": false,
        "MessagePort": false,
        "Navigator": false,
        "Performance": false,
        "PerformanceEntry": false,
        "PerformanceMark": false,
        "PerformanceMeasure": false,
        "PerformanceObserver": false,
        "PerformanceObserverEntryList": false,
        "PerformanceResourceTiming": false,
        "ReadableByteStreamController": false,
        "ReadableStream": false,
        "ReadableStreamBYOBReader": false,
        "ReadableStreamBYOBRequest": false,
        "ReadableStreamDefaultController": false,
        "ReadableStreamDefaultReader": false,
        "Request": false,
        "Response": false,
        "Storage": false,
        "SubtleCrypto": false,
        "SuppressedError": false,
        "TextDecoder": false,
        "TextDecoderStream": false,
        "TextEncoder": false,
        "TextEncoderStream": false,
        "TransformStream": false,
        "TransformStreamDefaultController": false,
        "URL": false,
        "URLPattern": false,
        "URLSearchParams": false,
        "WebAssembly": false,
        "WebSocket": false,
        "WritableStream": false,
        "WritableStreamDefaultController": false,
        "WritableStreamDefaultWriter": false,
        "__dirname": false,
        "__filename": false,
        "atob": false,
        "btoa": false,
        "clearImmediate": false,
        "clearInterval": false,
        "clearTimeout": false,
        "console": false,
        "crypto": false,
        "exports": true,
        "fetch": false,
        "global": false,
        "localStorage": false,
        "module": false,
        "navigator": false,
        "performance": false,
        "process": false,
        "queueMicrotask": false,
        "require": false,
        "sessionStorage": false,
        "setImmediate": false,
        "setInterval": false,
        "setTimeout": false,
        "structuredClone": false,
      },
      "parserOptions": {
        "projectService": false,
        "sourceType": "module",
      },
    },
  },
  {
    "files": [
      "**/*.{ts,tsx}",
    ],
    "languageOptions": {
      "parserOptions": {
        "projectService": true,
      },
    },
  },
  {
    "languageOptions": {
      "globals": {
        "AbortController": false,
        "AbortSignal": false,
        "AggregateError": false,
        "Array": false,
        "ArrayBuffer": false,
        "Atomics": false,
        "BigInt": false,
        "BigInt64Array": false,
        "BigUint64Array": false,
        "Blob": false,
        "Boolean": false,
        "BroadcastChannel": false,
        "Buffer": false,
        "ByteLengthQueuingStrategy": false,
        "CloseEvent": false,
        "CompressionStream": false,
        "CountQueuingStrategy": false,
        "Crypto": false,
        "CryptoKey": false,
        "CustomEvent": false,
        "DOMException": false,
        "DataView": false,
        "Date": false,
        "DecompressionStream": false,
        "Error": false,
        "EvalError": false,
        "Event": false,
        "EventTarget": false,
        "File": false,
        "FinalizationRegistry": false,
        "Float32Array": false,
        "Float64Array": false,
        "FormData": false,
        "Function": false,
        "Headers": false,
        "Infinity": false,
        "Int16Array": false,
        "Int32Array": false,
        "Int8Array": false,
        "Intl": false,
        "JSON": false,
        "Map": false,
        "Math": false,
        "MessageChannel": false,
        "MessageEvent": false,
        "MessagePort": false,
        "NaN": false,
        "Navigator": false,
        "Number": false,
        "Object": false,
        "Performance": false,
        "PerformanceEntry": false,
        "PerformanceMark": false,
        "PerformanceMeasure": false,
        "PerformanceObserver": false,
        "PerformanceObserverEntryList": false,
        "PerformanceResourceTiming": false,
        "Promise": false,
        "Proxy": false,
        "RangeError": false,
        "ReadableByteStreamController": false,
        "ReadableStream": false,
        "ReadableStreamBYOBReader": false,
        "ReadableStreamBYOBRequest": false,
        "ReadableStreamDefaultController": false,
        "ReadableStreamDefaultReader": false,
        "ReferenceError": false,
        "Reflect": false,
        "RegExp": false,
        "Request": false,
        "Response": false,
        "Set": false,
        "SharedArrayBuffer": false,
        "String": false,
        "SubtleCrypto": false,
        "Symbol": false,
        "SyntaxError": false,
        "TextDecoder": false,
        "TextDecoderStream": false,
        "TextEncoder": false,
        "TextEncoderStream": false,
        "TransformStream": false,
        "TransformStreamDefaultController": false,
        "TypeError": false,
        "URIError": false,
        "URL": false,
        "URLSearchParams": false,
        "Uint16Array": false,
        "Uint32Array": false,
        "Uint8Array": false,
        "Uint8ClampedArray": false,
        "WeakMap": false,
        "WeakRef": false,
        "WeakSet": false,
        "WebAssembly": false,
        "WebSocket": false,
        "WritableStream": false,
        "WritableStreamDefaultController": false,
        "WritableStreamDefaultWriter": false,
        "__dirname": "off",
        "__filename": "off",
        "atob": false,
        "btoa": false,
        "clearImmediate": false,
        "clearInterval": false,
        "clearTimeout": false,
        "console": false,
        "crypto": false,
        "decodeURI": false,
        "decodeURIComponent": false,
        "encodeURI": false,
        "encodeURIComponent": false,
        "escape": false,
        "eval": false,
        "exports": "off",
        "fetch": false,
        "global": false,
        "globalThis": false,
        "isFinite": false,
        "isNaN": false,
        "module": "off",
        "navigator": false,
        "parseFloat": false,
        "parseInt": false,
        "performance": false,
        "process": false,
        "queueMicrotask": false,
        "require": "off",
        "setImmediate": false,
        "setInterval": false,
        "setTimeout": false,
        "structuredClone": false,
        "undefined": false,
        "unescape": false,
      },
      "sourceType": "module",
    },
    "name": "node/flat/recommended-module",
    "plugins": [
      "n",
    ],
    "rules": {
      "n/hashbang": "error",
      "n/no-deprecated-api": "error",
      "n/no-exports-assign": "error",
      "n/no-extraneous-import": "error",
      "n/no-extraneous-require": "error",
      "n/no-missing-import": "error",
      "n/no-missing-require": "error",
      "n/no-process-exit": "error",
      "n/no-unpublished-bin": "error",
      "n/no-unpublished-import": "error",
      "n/no-unpublished-require": "error",
      "n/no-unsupported-features/es-builtins": "error",
      "n/no-unsupported-features/es-syntax": [
        "error",
        {
          "ignores": [
            "modules",
          ],
        },
      ],
      "n/no-unsupported-features/node-builtins": "error",
      "n/process-exit-as-throw": "error",
    },
  },
  {
    "rules": {
      "n/handle-callback-err": [
        "error",
        "^(err|error)$",
      ],
      "n/no-callback-literal": "error",
      "n/no-deprecated-api": "error",
      "n/no-exports-assign": "error",
      "n/no-missing-import": "off",
      "n/no-new-require": "error",
      "n/no-path-concat": "error",
      "n/no-unpublished-import": "off",
      "n/process-exit-as-throw": "error",
    },
  },
  {
    "files": [
      "src/index.ts",
    ],
    "rules": {
      "n/hashbang": "off",
      "n/no-process-exit": "off",
    },
  },
  {
    "files": [
      "*.config.{js,mjs,ts}",
    ],
    "rules": {
      "n/no-extraneous-import": "off",
    },
  },
]
`;
